--- a/debian/control
+++ b/debian/control
@@ -10,16 +10,13 @@ Build-Depends: debhelper (>= 11),
                qttools5-dev-tools,
 			   pkg-config
 Standards-Version: 4.2.1
-Homepage: https://github.com/ukui/ukui-biometric-auth
-Vcs-Git: https://github.com/ukui/ukui-biometric.git
-Vcs-Browser: https://github.com/ukui/ukui-biometric-auth
+Homepage: http://www.ukui.org
+Vcs-Git: https://salsa.debian.org/kylin-team/ukui-biometric-auth.git
+Vcs-Browser: https://salsa.debian.org/kylin-team/ukui-biometric-auth
 
 Package: libpam-biometric
 Architecture: any
-Depends: libqt5widgets5,
-         libqt5gui5,
-         libqt5core5a,
-         ${shlibs:Depends},
+Depends: ${shlibs:Depends},
          ${misc:Depends}
 Suggests: biometric-auth
 Description: Insertable authentication module for PAM
@@ -29,10 +26,7 @@ Description: Insertable authentication module for PAM
 
 Package: ukui-polkit
 Architecture: any
-Depends: libqt5widgets5,
-         libqt5gui5,
-         libqt5core5a,
-         libpolkit-qt5-1-1,
+Depends: policykit-1,
          ${shlibs:Depends},
          ${misc:Depends}
 Suggests: biometric-auth
