--- a/debian/control
+++ b/debian/control
@@ -1,9 +1,8 @@
 Source: ukui-biometric-auth
 Section: admin
 Priority: optional
-Maintainer: Kylin Team <team+kylin@tracker.debian.org>
-Uploaders: handsome_feng <jianfengli@ubuntukylin.com>
-Build-Depends: debhelper (>= 11),
+Maintainer: yanghao <yanghao@kylinos.cn>
+Build-Depends: debhelper (>= 9),
                cmake (>= 2.6),
                qtbase5-dev,
                libpam-dev,
@@ -11,14 +10,12 @@ Build-Depends: debhelper (>= 11),
                qttools5-dev,
                qttools5-dev-tools,
                pkg-config
-Standards-Version: 4.2.1
-Homepage: http://www.ukui.org
-Vcs-Git: https://salsa.debian.org/kylin-team/ukui-biometric-auth.git
-Vcs-Browser: https://salsa.debian.org/kylin-team/ukui-biometric-auth
+Standards-Version: 4.1.3
+Homepage: http://www.github.com/ukui/ukui-biometric-auth
 
 Package: libpam-biometric
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: libpam-runtime, ${shlibs:Depends}, ${misc:Depends}
 Suggests: biometric-auth
 Description: Insertable authentication module for PAM
  The indispensable part for biometric authentication in
