--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Build-Depends: debhelper-compat (= 12),
                qtbase5-dev,
                libpam-dev,
                libglib2.0-dev,
+	       libopencv-dev,
                libpolkit-qt5-1-dev,
                qttools5-dev,
                qttools5-dev-tools,
